<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="harikrishnankp14@gmail.com">hari</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!--for old launch file-->
  <exec_depend>urdf_launch</exec_depend>

  <!-- adde for new launch file-->
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <!--it ends here-->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
